--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "svelte-jspanel4",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "description": "Svelte component for jsPanel4",
+  "homepage": "https://ngyewch.github.io/svelte-jspanel4/",
+  "license": "MIT",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/ngyewch/svelte-jspanel4.git"
+  },
   "svelte": "src/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
