--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.25.1"
   },
+  "peerDependencies": {
+    "svelte": ">= 3.25.0"
+  },
   "keywords": [
     "svelte"
   ],
