--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "pnpm run build",
     "build:doc": "rollup -c node_modules/@svelte-docs/core/rollup.config.js",
     "autobuild": "rollup -c node_modules/@svelte-docs/core/rollup.config.js -w",
     "dev": "run-p start:dev start:pagewatch autobuild",
@@ -23,17 +23,17 @@
     "deploy": "npm run build:doc && node node_modules/@svelte-docs/publisher"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@svelte-docs/core": "^0.10.13",
-    "@svelte-docs/publisher": "^0.2.3",
-    "@svelte-docs/server": "^0.1.6",
-    "@svelte-docs/themes": "^1.0.1",
-    "jspanel4": "^4.16.1",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^2.79.1",
-    "rollup-plugin-svelte": "^7.1.6",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.59.2"
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@svelte-docs/core": "0.10.13",
+    "@svelte-docs/publisher": "0.2.3",
+    "@svelte-docs/server": "0.1.6",
+    "@svelte-docs/themes": "1.0.1",
+    "jspanel4": "4.16.1",
+    "npm-run-all": "4.1.5",
+    "rollup": "2.79.1",
+    "rollup-plugin-svelte": "7.2.0",
+    "rollup-plugin-terser": "7.0.2",
+    "svelte": "3.59.2"
   },
   "peerDependencies": {
     "svelte": ">= 3.25.0"
