--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@svelte-docs/server": "0.1.6",
     "@svelte-docs/themes": "1.0.1",
     "jspanel4": "4.16.1",
-    "npm-run-all": "4.1.5",
+    "npm-run-all2": "7.0.2",
     "rollup": "2.79.2",
     "rollup-plugin-svelte": "7.2.2",
     "svelte": "3.59.2"
